include/libgpump.h

typedef size_t gpump_size_t ;
///**
// * \brief Create a pair of windows for RDMA put and get operations
// *
// * \note This function needs to be called by both communication partners. It
// *       is a blocking call.
// *
// * \param[in] target rank in communicator of communication partner
// * \param[in] local_address address as returned by cudaMalloc of window used by put/get calls from this process
// * \param[in[ remote_address address as returned by cudaMalloc of window used by put/get calls from remote process
// * \param[in] size size in bytes of local and remote windows
// *
// */
//void gpump_f_create_window_r(MPI_Fint vcomm,MPI_Fint vtarget, void * vlocal_address, void * vremote_address, gpump_size_t vsize) ;
/**
 * \brief Destroy the RDMA put/get window
 *
 * \note This function is usually used before establishing a new pair of windows with another gpump_create_window call.
 *
 * \param[in] comm MPI communicator
 * \param[in] target rank in communicator of communication partner
 */
void gpump_f_destroy_window_r(MPI_Fint vcomm,MPI_Fint vtarget) ;
/**
 * \brief Cork the put/get/send calls to the GPU. Put/get/send requests are deferred _r(MPI_Fint vcomm,batched) and sent to the GPU
 * on the uncork call
 * \param[in] comm MPI communicator
 */
/**
 * \brief Propose creation of a pair of windows for RDMA put and get operations
 *
 * \note This function needs to be called by both communication partners.
 *
 * \param[in] comm MPI communicator
 * \param[in] target rank in communicator of communication partner
 * \param[out] index index in the per-window array
 * \param[in] local_address address as returned by cudaMalloc of window used by put/get calls from this process
 * \param[in[ remote_address address as returned by cudaMalloc of window used by put/get calls from remote process
 * \param[in] size size in bytes of local and remote windows
 *
 */
void gpump_f_create_window_propose_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint *index, void * vlocal_address, void * vremote_address, gpump_size_t vsize) ;
/**
 * \brief Propose replacement of a pair of windows for RDMA put and get operations
 *
 * \note This function needs to be called by both communication partners.
 *
 * \param[in] comm MPI communicator
 * \param[in] target rank in communicator of communication partner
 * \param[in] index index in the per-window array
 * \param[in] local_address address as returned by cudaMalloc of window used by put/get calls from this process
 * \param[in[ remote_address address as returned by cudaMalloc of window used by put/get calls from remote process
 * \param[in] size size in bytes of local and remote windows
 *
 */
void gpump_f_replace_window_propose_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex, void * vlocal_address, void * vremote_address, gpump_size_t vsize) ;
/**
* \brief Accept creation of a pair of windows for RDMA put and get operations
*
* \note This function needs to be called by both communication partners. It is a blocking call.
*
* \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] index index in the per-window array
*
*/
void gpump_f_window_accept_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex) ;
///**
// * \brief Create a pair of windows for RDMA put and get operations
// *
// * \note This function needs to be called by both communication partners. It
// *       is a blocking call.
// *
// * \param[in] target rank in communicator of communication partner
// * \param[in] local_address address as returned by cudaMalloc of window used by put/get calls from this process
// * \param[in[ remote_address address as returned by cudaMalloc of window used by put/get calls from remote process
// * \param[in] size size in bytes of local and remote windows
// *
// */
//void gpump_f_create_window_r(MPI_Fint vcomm,MPI_Fint vtarget, void * vlocal_address, void * vremote_address, gpump_size_t vsize) ;
/**
 * \brief Destroy the RDMA put/get window
 *
 * \note This function is usually used before establishing a new pair of windows with another gpump_create_window call.
 *
 * \param[in] comm MPI communicator
 * \param[in] target rank in communicator of communication partner
 * \param[in] index index in the per-window array
 */
void gpump_f_destroy_window_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex) ;
/**
 * \brief Cork the put/get/send calls to the GPU. Put/get/send requests are deferred _r(MPI_Fint vcomm,batched) and sent to the GPU
 * on the uncork call
 * \param[in] comm MPI communicator
 */
void gpump_f_cork_r(MPI_Fint vcomm) ;
/**
 * \brief Uncork put/get/send calls to the GPU
 *
 * \param[in] stream CUDA stream which will initiate the requests to the HCA
 */
void gpump_f_uncork_r(MPI_Fint vcomm,cudaStream_t vstream) ;
/**
* \brief Nonblocking RDMA put on stream to communication partner
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] stream CUDA stream which will initiate the put request to the HCA
* \param[in] offset Offset in bytes from 'local address' in the window from which data will be taken
* \param[out] remote_offset Offset in bytes from the communication partner's ' remote address' in the window which data will be written to
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_stream_put_r(MPI_Fint vcomm,MPI_Fint vtarget, cudaStream_t vstream, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
/**
* \brief Nonblocking RDMA put triggered by CPU to communication partner
*
* \param[in] target rank in communicator of communication partner
* \param[in] offset Offset in bytes from 'local address' in the window from which data will be taken
* \param[out] remote_offset Offset in bytes from the communication partner's 'remote address' in the window which data will be written to
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_iput_r(MPI_Fint vcomm,MPI_Fint vtarget, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
/**
* \brief Block the stream until the RDMA put completes
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] stream CUDA stream to block until the RDMA put completes
*
*/
void gpump_f_stream_wait_put_complete_r(MPI_Fint vcomm,MPI_Fint vtarget, cudaStream_t vstream) ;
/**
* \brief CPU acknowledges that RDMA put will complete
*
* \note Make this call if you will not be making a call to gpump_stream_wait_put_complete for this transfer
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*/
void gpump_f_cpu_ack_iput_r(MPI_Fint vcomm,MPI_Fint vtarget) ;
/**
* \brief Nonblocking test of whether the RDMA put is complete
*
* \note '1' will be returned once only for each RDMA put operation
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[out] is_complete 0 for still in progress, 1 for complete
*
*/
void gpump_f_is_put_complete_r(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint *is_complete) ;
/**
* \brief Blocking wait for RDMA completion
*
* \note equivalent to calling gpump_f_is_put_complete in a loop until 1 is returned
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*
*/
void gpump_f_wait_put_complete_r(MPI_Fint vcomm,MPI_Fint vtarget) ;
/**
* \brief Nonblocking RDMA get on stream from communication partner
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] stream CUDA stream which will initiate the get request to the HCA
* \param[out] offset Offset in bytes from 'local address' in the window to which data will be written
* \param[in] remote_offset Offset in bytes from the communication partner's 'remote address' in the window from which data will be taken
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_stream_get_r(MPI_Fint vcomm,MPI_Fint vtarget, cudaStream_t vstream, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
/**
* \brief Nonblocking RDMA get triggered by CPU from communication partner
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[out] offset Offset in bytes from 'local address' in the window to which data will be written
* \param[in] remote_offset Offset in bytes from the communication partner's 'remote address' in the window from which data will be taken
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_iget_r(MPI_Fint vcomm,MPI_Fint vtarget, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
/**
* \brief Block the stream until the RDMA get completes
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] stream CUDA stream to block until the RDMA get completes
*
*/
void gpump_f_stream_wait_get_complete_r(MPI_Fint vcomm,MPI_Fint vtarget, cudaStream_t vstream) ;
/**
* \brief CPU acknowledges that RDMA get will complete
*
* \note Make this call if you will not be making a call to gpump_stream_wait_get_complete for this transfer
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*/
void gpump_f_cpu_ack_iget_r(MPI_Fint vcomm,MPI_Fint vtarget) ;
/**
* \brief Nonblocking test of whether the RDMA get is complete
*
* \note '1' will be returned once only for each RDMA get operation
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[out] is_complete 0 for still in progress, 1 for complete
*
*/
void gpump_f_is_get_complete_r(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint *is_complete) ;
/**
* \brief Blocking wait for RDMA completion
*
* \note equivalent to calling gpump_f_is_get_complete in a loop until 1 is returned
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*
*/
void gpump_f_wait_get_complete_r(MPI_Fint vcomm,MPI_Fint vtarget) ;
/**
* \brief Nonblocking RDMA put on stream to communication partner
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] stream CUDA stream which will initiate the put request to the HCA
* \param[in] offset Offset in bytes from 'local address' in the window from which data will be taken
* \param[out] remote_offset Offset in bytes from the communication partner's ' remote address' in the window which data will be written to
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_stream_put_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex, cudaStream_t vstream, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
/**
* \brief Nonblocking RDMA put triggered by CPU to communication partner
*
* \param[in] target rank in communicator of communication partner
* \param[in] offset Offset in bytes from 'local address' in the window from which data will be taken
* \param[out] remote_offset Offset in bytes from the communication partner's 'remote address' in the window which data will be written to
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_iput_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
/**
* \brief Block the stream until the RDMA put completes
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] stream CUDA stream to block until the RDMA put completes
*
*/
void gpump_f_stream_wait_put_complete_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex, cudaStream_t vstream) ;
/**
* \brief CPU acknowledges that RDMA put will complete
*
* \note Make this call if you will not be making a call to gpump_stream_wait_put_complete for this transfer
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*/
void gpump_f_cpu_ack_iput_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex) ;
/**
* \brief Nonblocking test of whether the RDMA put is complete
*
* \note '1' will be returned once only for each RDMA put operation
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[out] is_complete 0 for still in progress, 1 for complete
*
*/
void gpump_f_is_put_complete_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex, MPI_Fint *is_complete) ;
/**
* \brief Blocking wait for RDMA completion
*
* \note equivalent to calling gpump_f_is_put_complete in a loop until 1 is returned
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
*
*/
void gpump_f_wait_put_complete_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex) ;
/**
* \brief Nonblocking RDMA get on stream from communication partner
*
 * \param[in] comm MPI communicator
* \param[in] target rank in communicator of communication partner
* \param[in] stream CUDA stream which will initiate the get request to the HCA
* \param[out] offset Offset in bytes from 'local address' in the window to which data will be written
* \param[in] remote_offset Offset in bytes from the communication partner's 'remote address' in the window from which data will be taken
* \param[in] size Size in bytes of data transfer
*/
void gpump_f_stream_get_rx(MPI_Fint vcomm,MPI_Fint vtarget, MPI_Fint vindex, cudaStream_t vstream, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;