include/gpump_f.F90


interface gpump_f_destroy_window_r
subroutine gpump_f_destroy_window_r(comm, target) &
bind(C, name='gpump_f_destroy_window_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_destroy_window_r
end interface gpump_f_destroy_window_r

interface gpump_f_create_window_propose_rx
subroutine gpump_f_create_window_propose_rx(comm, target, index, local_address, remote_address, size) &
bind(C, name='gpump_f_create_window_propose_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(out) :: index
integer(kind=C_LONG), intent(in), value :: local_address
integer(kind=C_LONG), intent(in), value :: remote_address
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_create_window_propose_rx
end interface gpump_f_create_window_propose_rx

interface gpump_f_replace_window_propose_rx
subroutine gpump_f_replace_window_propose_rx(comm, target, index, local_address, remote_address, size) &
bind(C, name='gpump_f_replace_window_propose_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: local_address
integer(kind=C_LONG), intent(in), value :: remote_address
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_replace_window_propose_rx
end interface gpump_f_replace_window_propose_rx

interface gpump_f_window_accept_rx
subroutine gpump_f_window_accept_rx(comm, target, index) &
bind(C, name='gpump_f_window_accept_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
end subroutine gpump_f_window_accept_rx
end interface gpump_f_window_accept_rx

!interface gpump_f_create_window_r
!subroutine gpump_f_create_window_r(comm, target, local_address, remote_address, size) &
!bind(C, name='gpump_f_create_window_r')
!use iso_c_binding
!integer(kind=C_INT), intent(in), value :: target
!integer(kind=C_LONG), intent(in), value :: local_address
!integer(kind=C_LONG), intent(in), value :: remote_address
!integer(kind=C_LONG), intent(in), value :: size
!end subroutine gpump_f_create_window_r
!end interface gpump_f_create_window_r

interface gpump_f_destroy_window_rx
subroutine gpump_f_destroy_window_rx(comm, target, index) &
bind(C, name='gpump_f_destroy_window_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
end subroutine gpump_f_destroy_window_rx
end interface gpump_f_destroy_window_rx

interface gpump_f_cork_r
subroutine gpump_f_cork_r(comm) &
bind(C, name='gpump_f_cork_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
end subroutine gpump_f_cork_r
end interface gpump_f_cork_r

interface gpump_f_uncork_r
subroutine gpump_f_uncork_r(comm, stream) &
bind(C, name='gpump_f_uncork_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: stream
end subroutine gpump_f_uncork_r
end interface gpump_f_uncork_r

interface gpump_f_stream_put_r
subroutine gpump_f_stream_put_r(comm, target, stream, offset, remote_offset, size) &
bind(C, name='gpump_f_stream_put_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_stream_put_r
end interface gpump_f_stream_put_r

interface gpump_f_iput_r
subroutine gpump_f_iput_r(comm, target, offset, remote_offset, size) &
bind(C, name='gpump_f_iput_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_iput_r
end interface gpump_f_iput_r

interface gpump_f_stream_wait_put_complete_r
subroutine gpump_f_stream_wait_put_complete_r(comm, target, stream) &
bind(C, name='gpump_f_stream_wait_put_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_put_complete_r
end interface gpump_f_stream_wait_put_complete_r

interface gpump_f_cpu_ack_iput_r
subroutine gpump_f_cpu_ack_iput_r(comm, target) &
bind(C, name='gpump_f_cpu_ack_iput_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_cpu_ack_iput_r
end interface gpump_f_cpu_ack_iput_r

interface gpump_f_is_put_complete_r
subroutine gpump_f_is_put_complete_r(comm, target, is_complete) &
bind(C, name='gpump_f_is_put_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_put_complete_r
end interface gpump_f_is_put_complete_r

interface gpump_f_wait_put_complete_r
subroutine gpump_f_wait_put_complete_r(comm, target) &
bind(C, name='gpump_f_wait_put_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_wait_put_complete_r
end interface gpump_f_wait_put_complete_r

interface gpump_f_stream_get_r
subroutine gpump_f_stream_get_r(comm, target, stream, offset, remote_offset, size) &
bind(C, name='gpump_f_stream_get_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_stream_get_r
end interface gpump_f_stream_get_r

interface gpump_f_iget_r
subroutine gpump_f_iget_r(comm, target, offset, remote_offset, size) &
bind(C, name='gpump_f_iget_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_iget_r
end interface gpump_f_iget_r

interface gpump_f_stream_wait_get_complete_r
subroutine gpump_f_stream_wait_get_complete_r(comm, target, stream) &
bind(C, name='gpump_f_stream_wait_get_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_get_complete_r
end interface gpump_f_stream_wait_get_complete_r

interface gpump_f_cpu_ack_iget_r
subroutine gpump_f_cpu_ack_iget_r(comm, target) &
bind(C, name='gpump_f_cpu_ack_iget_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_cpu_ack_iget_r
end interface gpump_f_cpu_ack_iget_r

interface gpump_f_is_get_complete_r
subroutine gpump_f_is_get_complete_r(comm, target, is_complete) &
bind(C, name='gpump_f_is_get_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_get_complete_r
end interface gpump_f_is_get_complete_r

interface gpump_f_wait_get_complete_r
subroutine gpump_f_wait_get_complete_r(comm, target) &
bind(C, name='gpump_f_wait_get_complete_r')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_wait_get_complete_r
end interface gpump_f_wait_get_complete_r

interface gpump_f_stream_put_rx
subroutine gpump_f_stream_put_rx(comm, target, index, stream, offset, remote_offset, size) &
bind(C, name='gpump_f_stream_put_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: stream
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_stream_put_rx
end interface gpump_f_stream_put_rx

interface gpump_f_iput_rx
subroutine gpump_f_iput_rx(comm, target, index, offset, remote_offset, size) &
bind(C, name='gpump_f_iput_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_iput_rx
end interface gpump_f_iput_rx

interface gpump_f_stream_wait_put_complete_rx
subroutine gpump_f_stream_wait_put_complete_rx(comm, target, index, stream) &
bind(C, name='gpump_f_stream_wait_put_complete_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_put_complete_rx
end interface gpump_f_stream_wait_put_complete_rx

interface gpump_f_cpu_ack_iput_rx
subroutine gpump_f_cpu_ack_iput_rx(comm, target, index) &
bind(C, name='gpump_f_cpu_ack_iput_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
end subroutine gpump_f_cpu_ack_iput_rx
end interface gpump_f_cpu_ack_iput_rx

interface gpump_f_is_put_complete_rx
subroutine gpump_f_is_put_complete_rx(comm, target, index, is_complete) &
bind(C, name='gpump_f_is_put_complete_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_put_complete_rx
end interface gpump_f_is_put_complete_rx

interface gpump_f_wait_put_complete_rx
subroutine gpump_f_wait_put_complete_rx(comm, target, index) &
bind(C, name='gpump_f_wait_put_complete_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
end subroutine gpump_f_wait_put_complete_rx
end interface gpump_f_wait_put_complete_rx

interface gpump_f_stream_get_rx
subroutine gpump_f_stream_get_rx(comm, target, index, stream, offset, remote_offset, size) &
bind(C, name='gpump_f_stream_get_rx')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: stream
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_stream_get_rx
end interface gpump_f_stream_get_rx
